# factor-pricing-model-risk-model

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  issue-manager.yml  labels.yml  release.yml
docs/source/: accuracy.md  conf.py  covariance.md  engine.md  index.md  installation.md  q_a.md  statistical.md  usage.md
docs/source/accuracy/: bias.md  value_at_risk.md
docs/source/examples/: statistical.md
docs/source/risk_model/: covariance.md  factor_risk_model.md  risk_model.md  statistical.md  universe.md
docs/source/risk_model/statistical/: apca.md  pca.md
docs/source/statistical/: pca.md
examples/: us-equity-accuracy.yaml  us-equity-estimation-apca.yaml  us-equity-estimation-pca.yaml  us-equity-estimation-wls.yaml  us-equity-estimation.yaml  us-equity-model-wls.yaml  us-equity-model.yaml
examples/notebook/: crypto_empirical_analysis_alpha_sizing_rules.ipynb  crypto_statistical_risk_model.ipynb  numpy_backend_engine.ipynb
examples/yaml/: us-equity-accuracy.yaml  us-equity-model-apca.yaml  us-equity-model-pca.yaml
src/fpm_risk_model/: __init__.py  config.py  cov_estimator.py  engine.py  factor_risk_model.py  factor_risk_model_transformer.py  risk_model.py  rolling_factor_risk_model.py  rolling_risk_model.py
src/fpm_risk_model/accuracy/: __init__.py  bias.py  value_at_risk.py
src/fpm_risk_model/dataset/: crypto.py
src/fpm_risk_model/engine/: __init__.py  numpy.py
src/fpm_risk_model/pipeline/: __init__.py  portfolio.py  returns.py
src/fpm_risk_model/regressor/: __init__.py  ewls.py  wls.py
src/fpm_risk_model/statistical/: __init__.py  apca.py  pca.py  rolling_pca.py
tests/: test_cov_estimator.py  test_engine.py  test_factor_risk_model.py  test_factor_risk_model_transform.py  test_factor_risk_model_transformer.py  test_rolling_factor_risk_model.py
tests/accuracy/: conftest.py  test_bias.py  test_value_at_risk.py
tests/pipeline/: test_portfolio.py
tests/regressor/: test_ewls.py  test_wls.py
tests/statistical/: conftest.py  test_apca.py  test_pca.py
tests/statistical/pca/: test_pca.py  test_rolling_pca.py
